--- a/pages/my-projects.html
+++ b/pages/my-projects.html
@@ -14,15 +14,15 @@
 
             <div id="my-projects-page-main-div">
                 <div class="platform-div" onclick="window.location.href = 'mobile-apps.html';">
-                    <img src="/assets/images/iphone-bezel.png" width="100%">
+                    <img src="/assets/images/mobile.svg">
                     <span>Mobile Apps</span>
                 </div>
                 <div class="platform-div" onclick="window.location.href = 'desktop-apps.html';">
-                    <img src="/assets/images/mac-bezel.png" width="100%">
+                    <img src="/assets/images/desktop.svg">
                     <span>Desktop Apps</span>
                 </div>
                 <div class="platform-div" onclick="window.location.href = 'web-apps.html';">
-                    <img src="/assets/images/web.svg" width="100%">
+                    <img src="/assets/images/web.svg">
                     <span>Web Apps</span>
                 </div>
             </div>
