--- a/pages/mobile-apps.html
+++ b/pages/mobile-apps.html
@@ -5,7 +5,7 @@
         <script src="/components.js"></script>
         <script src="/script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mobile Apps</title>
+        <title>My Mobile Apps</title>
     </head>
 
     <body>
