--- a/projects/rebar-info/rebar-info.html
+++ b/projects/rebar-info/rebar-info.html
@@ -6,6 +6,7 @@
 		<script src="/script.js" defer></script>
 		<script src="/projects/projects.js" defer></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="og:image" content="https://www.emircihangir.com/projects/rebar-info/assets/link-preview.png" />
 		<title>Rebar Info</title>
 	</head>
 
