--- a/pages/python-projects.html
+++ b/pages/python-projects.html
@@ -15,7 +15,9 @@
 			<div style="flex: 1; text-align: center">
                 <div style="font-weight: 500; font-size: 3rem;margin: 50px 0px 15px 0px;">Python Projects</div>
 
-				
+				<div style="display: flex; justify-content: center; flex-wrap: wrap">
+                    <app-link app-title="Signature Analysis" app-name="signature-analysis" icon-type="svg"></app-link>
+                </div>
 			</div>
 		</div>
 
